@@ -1,6 +1,6 @@
 Package: mia
 Type: Package
-Version: 1.9.6
+Version: 1.9.7
 Authors@R:
     c(person(given = "Felix G.M.", family = "Ernst", role = c("aut"),
              email = "felix.gm.ernst@outlook.com",
@@ -23,7 +23,8 @@ Authors@R:
       person(given = "Jayaram", family = "Kancherla", role=c("ctb")),
       person(given = "Domenick", family = "Braccia",
              email = "dbraccia@umd.edu", role=c("ctb")),
-      person(given = "Basil", family = "Courbayre", role=c("ctb")))
+      person(given = "Basil", family = "Courbayre", role=c("ctb")),
+      person(given = "Muluh", family = "Muluh", role=c("ctb")))
 Title: Microbiome analysis
 Description:
     mia implements tools for microbiome analysis based on the 
