@@ -80,3 +80,4 @@ Changes in version 1.9.x
 + cluster: added wrapper for bluster's clusterRows function
 + Added loadFromHumann
 + calculateDMM: deprecated/updated outdated functions
++ Added Tengeler2020 dataset
